# niwa

./: .gitignore  CLAUDE.md  DECISIONS-LOG.md  INSTALL.md  README.md  SPEC-v0.2-2.md  bootstrap.sh  docker-compose.advanced.yml  docker-compose.yml.tmpl  niwa  niwa.env.example  setup-v0.2-docs.sh  setup.py
backend/: pyproject.toml
backend/app/: __init__.py  config.py  niwa_cli.py  triage.py
backend/app/adapters/: __init__.py
backend/app/api/: deps.py  projects.py  readiness.py  tasks.py
backend/app/executor/: __main__.py  core.py  git_workspace.py
backend/app/models/: __init__.py  attachment.py  project.py  run.py  run_event.py  task.py
backend/app/schemas/: __init__.py  attachment.py  pulls.py
backend/app/services/: __init__.py  attachments.py  github_pulls.py  runs.py
backend/app/verification/: artifacts.py  core.py
backend/migrations/versions/: 9d205b6968c1_initial_schema.py  f98a50e87242_add_attachments_table.py
backend/tests/: conftest.py  test_adapter.py  test_attachments.py  test_attachments_service.py  test_bootstrap.py  test_config.py  test_deploy_api.py  test_git_workspace.py  test_github_pulls.py  test_health.py  test_models.py  test_niwa_cli.py  test_projects_api.py  test_readiness_api.py  test_runs_api.py  test_triage.py
backend/tests/fixtures/: fake_claude_cli.py
backend/tests/verification/: test_artifacts.py  test_stream.py
caddy/: Caddyfile
docs/: ARCHITECTURE.md  BUGS-FOUND.md  DECISIONS-LOG.md  HANDBOOK.md  ISU-AUDIT.md  MVP-ROADMAP.md  PLAN-AUTH-SUBSCRIPTION.md  PLAN-OPENCLAW-INTEGRATION.md  PORTABILITY-PLAN.md  SPEC-v0.2.md  (+7 more)
(+579 files in other folders)
