[project]
name = "niwa-v1-backend"
version = "0.1.0"
description = "Niwa v1 backend — FastAPI skeleton"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2",
    "alembic",
    "pydantic>=2",
    "pydantic-settings",
    "python-multipart>=0.0.26",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[project.scripts]
niwa-executor = "app.niwa_cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
